feat: migrate to Groq + Firebase auth and fix chatbot/courses